[update]更新ParmApi，使其可用